# cmake_learning

./: .gitignore
install/: TutorialConfig.h
step1/: CMakeLists.txt  tutorial.cxx
step1/step1_build/: CMakeCache.txt  Makefile  cmake_install.cmake
stepx/: CMakeLists.txt  TutorialConfig.h.in
stepx/MathFunctions/: CMakeLists.txt  mysqrt.cxx
stepx/stepx_build/: CMakeCache.txt  CTestTestfile.cmake  Makefile  Tutorial  TutorialConfig.h  cmake_install.cmake  install_manifest.txt
stepx/stepx_build/MathFunctions/: Makefile  cmake_install.cmake
stepx/stepx_build/Testing/Temporary/: CTestCostData.txt
